[package]
name = "display_json"
version = "0.2.1"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Procedural macros for implementing Display, Debug and FromStr for (de)serializing json strings"
keywords = ["Display", "Debug", "FromStr", "json", "serde"]
homepage = "https://github.com/jofas/display_json"
repository = "https://github.com/jofas/display_json"
documentation = "https://docs.rs/display_json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["derive", "printing", "extra-traits", "parsing"] }
quote = "^1.0.0"
proc-macro2 = "^1.0.24"
serde_json = "^1.0.64"
serde = { version = "^1.0.125", features = ["derive"] }
