[package]
name = "display_json_derive"
version = "0.1.0"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0.0", features = ["derive", "printing", "extra-traits"] }
quote = "^1.0.0"
proc-macro2 = "*"
